--- a/client/index.html
+++ b/client/index.html
@@ -29,33 +29,46 @@
     />
 
     <!-- Meta tags for SEO -->
+
+    <meta name="title" content="Raouf Zadi" />
     <meta
       name="description"
-      content="Welcome to Raouf Zadi's Barber Shop, where style meets precision. Experience expert haircuts and grooming tailored just for you."
+      content="Professional barber with 7+ years of experience offering haircuts, styling, and barbering education."
     />
     <meta
       name="keywords"
-      content="barber, haircuts, grooming, beard trimming, hairstyling"
+      content="barber, barbering, haircuts, styling, beard sculpting, barber education, children's haircuts, Algeria, Raouf Zadi"
     />
-    <meta name="author" content="Raouf Zadi" />
     <meta name="robots" content="index, follow" />
-    <meta name="referrer" content="origin" />
-    <meta property="og:title" content="Raouf Zadi - Barber" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="200 days" />
+    <meta name="author" content="Raouf Zadi" />
+
     <meta
       property="og:description"
-      content="Welcome to Raouf Zadi's Barber Shop, where style meets precision. Experience expert haircuts and grooming tailored just for you."
+      content="Professional barber with 7+ years of experience offering haircuts, styling, and barbering education."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/images/raouf-zadi-barber.jpg" />
+    <meta
+      property="og:image"
+      content="https://cdn.dribbble.com/userupload/17286344/file/original-5562363d65893a07df2e5fba130e61dd.jpg?resize=1024x1024"
+    />
     <meta property="og:image:alt" content="Raouf Zadi Barber Shop" />
     <meta property="og:site_name" content="Raouf Zadi" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:card"
+      content="Professional barber with 7+ years of experience offering haircuts, styling, and barbering education.    "
+    />
     <meta name="twitter:title" content="Raouf Zadi - Barber" />
     <meta
       name="twitter:description"
-      content="Welcome to Raouf Zadi's Barber Shop, where style meets precision. Experience expert haircuts and grooming tailored just for you."
+      content="Professional barber with 7+ years of experience offering haircuts, styling, and barbering education."
     />
-    <meta name="twitter:image" content="/images/raouf-zadi-barber.jpg" />
+    <meta
+      name="twitter:image"
+      content="https://cdn.dribbble.com/userupload/17286344/file/original-5562363d65893a07df2e5fba130e61dd.jpg?resize=1024x1024"
+    />
   </head>
   <body>
     <div id="root"></div>
